--- a/H4TestOgSikkerhed/Pages/FileTest.razor
+++ b/H4TestOgSikkerhed/Pages/FileTest.razor
@@ -8,7 +8,7 @@
 
 Press the button to try creating a file on the server.
 
-<button class="btn btn-primary" @onclick="TryCreateFile">Create file</button>
+<button id="filetest_button" class="btn btn-primary" @onclick="TryCreateFile">Create file</button>
 
 @if (tried)
 {
