--- a/H4TestOgSikkerhed/Areas/Identity/Pages/Account/Register.cshtml
+++ b/H4TestOgSikkerhed/Areas/Identity/Pages/Account/Register.cshtml
@@ -27,6 +27,11 @@
                 <label asp-for="Input.ConfirmPassword">Confirm Password</label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
+            <div>
+                
+                <h3 style="float:left">Enable 2FA</h3>
+                <input asp-for="Input.TWOFA" type="checkbox" style="width: 25px; height:25px; float:right" />
+            </div>
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
     </div>
