--- a/H4TestOgSikkerhed/wwwroot/css/site.css
+++ b/H4TestOgSikkerhed/wwwroot/css/site.css
@@ -66,3 +66,9 @@ a, .btn-link {
     .blazor-error-boundary::after {
         content: "An error has occurred."
     }
+
+.checkbox {
+    width: 50px !important;
+    height: 50px !important;
+    border-radius: 6px !important;
+}
