--- a/H4TestOgSikkerhed/Pages/FileTest.razor
+++ b/H4TestOgSikkerhed/Pages/FileTest.razor
@@ -14,7 +14,7 @@ Press the button to try creating a file on the server.
 {
     @if (success)
     {
-        //<div id="success">File was created successfully at @error</div>
+        <div id="success">File was created successfully at @error</div>
     }
     else
     {
