--- a/H4TestOgSikkerhed/wwwroot/css/site.css
+++ b/H4TestOgSikkerhed/wwwroot/css/site.css
@@ -68,7 +68,6 @@ a, .btn-link {
     }
 
 .checkbox {
-    width: 50px !important;
-    height: 50px !important;
-    border-radius: 6px !important;
+    display:flex;
+    justify-content:space-between;
 }
